Modification du titre H1

--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<h1>BONJOUR NADINE TU VAS BIEN 
+<h1>BONJOUR nadine 
 </body>
